# PenguEngine

./: CMakeLists.txt  README.md  main.cpp  main.hpp
externalLibraries/GLAD/: CMakeLists.txt
externalLibraries/GLAD/include/glad/: glad.h
externalLibraries/GLAD/src/: glad.c
externalLibraries/GLFW/glfw-3.3.6/: CMakeLists.txt
externalLibraries/GLFW/glfw-3.3.6/CMake/modules/: FindEpollShim.cmake  FindXKBCommon.cmake
externalLibraries/GLFW/glfw-3.3.6/examples/: particles.c
externalLibraries/GLFW/glfw-3.3.6/include/GLFW/: glfw3.h  glfw3native.h
externalLibraries/GLFW/glfw-3.3.6/src/: CMakeLists.txt  cocoa_platform.h  context.c  nsgl_context.h  win32_init.c
externalLibraries/GLM/glm-master/: .appveyor.yml  .gitignore  .travis.yml
externalLibraries/GLM/glm-master/glm/: common.hpp  glm.hpp
externalLibraries/GLM/glm-master/glm/detail/: compute_vector_relational.hpp  func_matrix.inl  setup.hpp  type_quat.inl
externalLibraries/GLM/glm-master/glm/ext/: matrix_transform.hpp
externalLibraries/GLM/glm-master/glm/gtc/: type_ptr.hpp
externalLibraries/GLM/glm-master/glm/gtx/: compatibility.hpp  rotate_normalized_axis.hpp
externalLibraries/GLM/glm-master/test/gtx/: gtx_load.cpp
input/: keyboardInput.hpp  mouseInput.hpp
objects/: triangle.hpp
rendering/: buffer.cpp  buffer.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp
res/shaders/: firstVertexShader.vs
src/: main.cpp
src/input/: keyboardInput.cpp  keyboardInput.hpp  mouseInput.cpp  mouseInput.hpp
src/objects/: triangle.cpp  triangle.hpp
src/rendering/: renderer.cpp  renderer.hpp
src/rendering/buffer/: ElementBuffer.cpp  ElementBuffer.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/rendering/shader/: shader.hpp
src/window/: window.cpp  window.hpp
window/: window.cpp  window.hpp
(+2 files in other folders)
